# cabinette

./: .gitignore  README.md  bert_named_entity_recognition.ipynb  config.cfg  flake.nix  micromamba.yml  requirements.txt  train.spacy
dataset/: annotations.json  pytorch_dataset.csv  unannotated_corpus.txt
dataset/utils/: json_to_bilou.py
rust/: Cargo.toml  flake.nix
rust/ml_src/: main.rs
rust/src/: index.html  input.css  main.js  main.rs  output.css
rust/src-tauri/: Cargo.toml  stor.cabinette  tauri.conf.json
rust/src-tauri/src/: main.rs  model.rs  store.rs
rust/views/: index.html  input.css
utils/: merge_annotation_files.py  prune_markdown_corpus.py
