[package]
name = "cabinette"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
serde_json = "1.0"
tokenizers = "0.20"
candle-token-classification = { git = "https://github.com/lavafroth/candle-token-classification", branch = "bump-tokenizers"}
clap = { version = "4.5.15", features = ["derive"] }
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
itertools = "0.13.0"
glob = "0.3.1"
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
